# arXivScooper

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  FEATURES.md  OVERLEAF_QUICKSTART.md  OVERLEAF_SYNC_README.md  README.md  SECURITY.md  bookmarklet.html  db_utils.js  dev.html  package.json  paper_database.html  paper_scraper.html  pyproject.toml  start.bat
.claude/skills/add-paper/: SKILL.md
.claude/skills/db-maintenance/: SKILL.md
.claude/skills/enrich-paper/: SKILL.md
.claude/skills/literature-review/: SKILL.md
.claude/skills/summarize-patent/: SKILL.md
.github/workflows/: arxiv_digest.yml  pages.yml  test.yml
data/: README.md
data/migrations/: 001_initial.sql  002_patents.sql
data/user_config/: paths.toml.example
docs/: configuration.md
scq/: cli.py  monitor.py  relevance.py  server.py
scq/arxiv/: digest.py  email.py  search.py  state.py
scq/config/: paths.py
scq/db/: connection.py  init.py  migrations.py
scq/ingest/: process.py
scq/patents/: __init__.py  cli.py  normalize.py  relevance.py  store.py  summarize.py
scq/patents/providers/: __init__.py  google.py  patentsview.py
src/core/: db.js
src/services/: database-sync.js  patents.js
tests/: test_arxiv_modules.py  test_arxiv_search.py  test_arxiv_state.py  test_cli.py  test_doc_drift.py  test_patents.py  test_paths.py  test_save_db_endpoint.py  test_serve_db_endpoint.py  test_serve_patents_endpoint.py  test_serve_test_endpoints.py
tools/git-hooks/: README.md  pre-push
tools/github_actions/: SETUP.md
tools/hooks/: README.md  pre-commit  pre_commit_secret_scan.py
(+14 files in other folders)
