[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scq"
version = "0.1.0.dev0"
description = "arXivScooper — paper database and arXiv digest toolkit for SCQ research"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paige Quarterman" }]
keywords = ["arxiv", "literature", "research", "scq", "superconducting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "feedparser>=6.0",
    "jsonschema>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
keyring = ["keyring>=24.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/pquarterman17/arXivScooper"

[project.scripts]
scq = "scq.cli:main"

[tool.setuptools.packages.find]
include = ["scq*"]
exclude = ["tests*", "tools*", "legacy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
